[gd_scene load_steps=5 format=3 uid="uid://7vdf4ymva8u1"]

[ext_resource type="Script" uid="uid://vi7i4b753ys3" path="res://scripts/main.gd" id="1_efve0"]
[ext_resource type="PackedScene" uid="uid://chk7xkp2mqp7v" path="res://scenes/menu.tscn" id="1_w5mto"]
[ext_resource type="PackedScene" uid="uid://b7vrsbwevt2xy" path="res://scenes/game.tscn" id="2_wcs76"]
[ext_resource type="PackedScene" uid="uid://w3fpkkpjm0p6" path="res://scenes/starfield.tscn" id="3_r7s0j"]

[node name="Main" type="Node2D"]
script = ExtResource("1_efve0")

[node name="Menu" parent="." instance=ExtResource("1_w5mto")]

[node name="Game" parent="." instance=ExtResource("2_wcs76")]

[node name="Starfield" parent="." instance=ExtResource("3_r7s0j")]
z_index = -10

[connection signal="change_options_signal" from="Menu" to="." method="_on_menu_change_options"]
[connection signal="new_game_signal" from="Menu" to="." method="_on_menu_new_game"]
[connection signal="game_over_signal" from="Game" to="." method="_on_game_over"]
